public interface Componente {
    void mostrar();
}